--- a/cafe.css
+++ b/cafe.css
@@ -36,7 +36,7 @@ body {
   background-image: url(img/index.png) ;
   background-size: cover;
   background-position: center;
-}
+}/
 p {
   margin: 0;
   padding: 0;
